--- a/styles/registration.module.css
+++ b/styles/registration.module.css
@@ -20,6 +20,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.white{
+    color: aliceblue;
+}
 .twocol{
     width: 70%;
     height: auto;
