--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -1,32 +1,48 @@
 .Checkout{
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background: url(../public/animated-bg.gif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .twocol{
     display: grid;
     grid-template-columns: 1fr;
-    width: 90%;
+    width: 80%;
     padding: 10px;
     border: none;
     border-radius: 12px;
     background: white;
-    box-shadow: -1px -1px 60px 17px rgba(0,0,0,0.1);
+    margin: 100px auto;
+    box-shadow: -1px -1px 60px 0px rgba(0,0,0,0.1);
+}
+.overflow{
+    overflow: scroll;
 }
 .left, .right{
     width: 100%;
     padding: 10px;
 }
-.table{
-    width: 100%;
-    padding: 10px;
+.PayImg{
+    width: 40%;
+    height: 40%;
+    margin: 20px auto;
 }
-.td, .th{
+.form{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 7px;
+}
+.input{
     padding: 10px;
     border: 0.1px solid silver;
+    border-radius: 4px;
+    outline: none;
 }
 .btn{
     padding: 10px 20px;
@@ -40,12 +56,33 @@
     background: #000;
     color: #ff3000;
 }
+.table{
+    width: 100%;
+    padding: 10px;
+}
+.td, .th{
+    padding: 10px;
+    border: 0.1px solid silver;
+}
+.th{
+    background: linear-gradient(50deg, gold, #ff3000);
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-clip: text;
+}
 @media only screen and (max-width: 768px) {
+    .twocol{
+        grid-template-columns: 1fr;
+        width: 95%;
+    }
     .left{
         overflow: scroll;
     }
     .btn{
         width: 90%;
         margin: 0 auto;
+    }
+    .td, .th{
+        text-align: center;
     }
 }
