--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -61,8 +61,9 @@
     padding: 10px;
 }
 .td, .th{
-    padding: 10px;
+    padding: 5px;
     border: 0.1px solid silver;
+    text-align: center;
 }
 .th{
     background: linear-gradient(50deg, gold, #ff3000);
@@ -84,5 +85,6 @@
     }
     .td, .th{
         text-align: center;
+        padding: 15px;
     }
 }
