--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -82,7 +82,7 @@
 }
 @media only screen and (max-width: 768px) {
     .twocol{
-        grid-template-columns: 1fr;
+        grid-template-columns: 100%;
         width: 95%;
     }
     .left{
