--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -111,6 +111,11 @@
         grid-template-columns: 100%;
         width: 95%;
     }
+    .Successbox{
+        width: 95%;
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
     .left{
         overflow: scroll;
     }
