--- a/styles/checkout.module.css
+++ b/styles/checkout.module.css
@@ -113,6 +113,7 @@
     }
     .Successbox{
         width: 95%;
+        padding: 20px 10px;
         grid-template-columns: 1fr;
         text-align: center;
     }
